<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Motion Control</string>
    <string name="widget_name">Motion Widget</string>
    <string name="empty"></string>
    <string name="add_host">Add Host</string>
    <string name="about">About</string>
    <string name="status">Status</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="snapshot">Snapshot</string>
    <string name="open_source_title">Github - Open Source</string>
    <string name="open_source_ref">Motion Widget is open source. The source code is available on github here:
        https://github.com/fonaro/MotionWidget</string>
    <string name="lincece">License Agreement</string>
    <string name="lincece_ref">Motion Widget is licensed under the Apache Licence, Version 2.0 : http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="widget_conf_title">Motion Widget Configuration</string>
    <string name="base_url_title">Motion URL Base</string>
    <string name="base_url_help">The base URL of your motion server, including a port if necessary.
        e.g. just enter http://www.yourmotionserver.com:8000 when the full path to the camera API is http://www.yourmotionserver.com:8000/0/detection/start</string>
    <string name="alter_url_title">Alternative URL Base</string>
    <string name="alter_url_help">An alternative base URL for your motion server.
        Useful when on the same home network as the motion server, when the external domain name does not resolve correctly.
        e.g. http://192.168.0.1:8000 This 2nd URL will be used if the 1st is unreachable.</string>
    <string name="camera_num_title">Camera Number</string>
    <string name="camera_num_help">The camera number. e.g. 0 from http://www.yourmotionserver.com:8000/0/detection/start</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="title_activity_main">Motion Control</string>
    <string name="action_settings">Settings</string>
    <string name="add_host_title">Add New Host</string>
    <string name="host_name">Host Name</string>
    <string name="title_activity_add_host">AddHostActivity</string>
    <string name="edit_host_title">Edit</string>
    <string name="edit_host_description">Edit the host properties</string>
    <string name="remove_host_menu_title">Remove</string>
    <string name="remove_host_title">Remove Host</string>
    <string name="remove_host_alert">
        Are you sure you want to remove this host?
        This action can not be undone.
    </string>
    
    <string name="not_synced">not synced</string>

</resources>