<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/widget_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6sp"
        android:layout_marginRight="6sp"
        android:layout_marginTop="6sp"
        android:text="@string/app_name"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/empty"
        android:src="@android:drawable/divider_horizontal_dark" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/button_status"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight=".25"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/status" />

        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight=".25"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/start" />

        <Button
            android:id="@+id/button_pause"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight=".25"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/pause" />

        <Button
            android:id="@+id/button_snapshot"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight=".25"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/snapshot" />
    </LinearLayout>

</LinearLayout>