<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/add_host_title"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#FF909090" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/host_name" />

        <EditText
            android:id="@+id/hostname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoCorrect" />
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#FF909090" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/base_url_title" />

        <EditText
            android:id="@+id/hostExternalUrl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/base_url_help"
            android:textSize="12sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/alter_url_title" />

        <EditText
            android:id="@+id/hostInternalUrl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/alter_url_help"
            android:textSize="12sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/username_title" />

        <EditText
            android:id="@+id/hostUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/password_title" />

        <EditText
            android:id="@+id/hostPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FF909090" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:weightSum="1.0" >

            <Button
                android:id="@+id/cancelbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dip"
                android:text="@android:string/cancel" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#FF909090" />

            <Button
                android:id="@+id/okbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dip"
                android:text="@android:string/ok" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>