<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRowTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/widget_conf_title"
                android:textStyle="bold" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow
            android:id="@+id/tableRowExternalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ExternalLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/base_url_title" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowExternalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >

            <EditText
                android:id="@+id/ExternalText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textUri" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowExternalHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ExternalHelp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/base_url_help"
                android:textSize="12sp" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow
            android:id="@+id/tableRowInternalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/InternalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:text="@string/alter_url_title" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowInternalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >

            <EditText
                android:id="@+id/InternalText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textUri" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowInternalHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/InternalHelp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/alter_url_help"
                android:textSize="12sp" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow
            android:id="@+id/tableRowCameraLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dip" >

            <TextView
                android:id="@+id/CameraLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:text="@string/camera_num_title" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRowCameraText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >
            

            <EditText
                android:id="@+id/CameraText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowCameraHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/CameraHelp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dip"
                android:text="@string/camera_num_help"
                android:textSize="12sp" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow
            android:id="@+id/tableRowUsernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dip" >

            <TextView
                android:id="@+id/UsernameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:text="@string/username_title" />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRowUsernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >
        
        	<EditText
                android:id="@+id/UsernameText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textNoSuggestions" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow
            android:id="@+id/tableRowPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dip" >

            <TextView
                android:id="@+id/PasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:text="@string/password_title" />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRowPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >
            
            <EditText
                android:id="@+id/PasswordText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />
        
        <TableRow
            android:id="@+id/tableRowGlyphiconsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dip" >
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRowGlyphiconsHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRowApacheLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dip" >

            <TextView
                android:id="@+id/ApacheLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:text="@string/lincece" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRowApacheHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ApacheHelp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingBottom="10dip"
                android:text="@string/lincece_ref"
                android:textSize="12sp" />
        </TableRow>
        
        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow
            android:id="@+id/tableRowGitHubLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dip" >

            <TextView
                android:id="@+id/GitHubLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:text="@string/open_source_title" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRowOpenSourceHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/OpenSourceHelp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingBottom="10dip"
                android:text="@string/open_source_ref"
                android:textSize="12sp" />
        </TableRow>
        
        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow
            android:id="@+id/tableRowButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip" >

            <Button
                android:id="@+id/cancelbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dip"
                android:background="?android:attr/selectableItemBackground"
                android:text="@android:string/cancel" >
            </Button>

            <Button
                android:id="@+id/okbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dip"
                android:background="?android:attr/selectableItemBackground"
                android:text="@android:string/ok" >
            </Button>
        </TableRow>
        
    </TableLayout>

</ScrollView>